--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -12,7 +12,7 @@
     <span class="navbar-brand font-weight-bold" th:text="${user.email}"></span>
         <span class="navbar-brand" th:text="'with roles:'"></span>
     <span class="navbar-brand"
-           th:each="role : ${user.getRoles()}" th:text="${#strings.replace(role, 'ROLE_', '')} + ' '"></span>
+          th:each="role : ${user.getRoles()}" th:text="${#strings.replace(role, 'ROLE_', '')} + ' '"></span>
     </span>
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -193,10 +193,9 @@
                                                                                    for="editPassword">Password</label>
                                                                             <input type="password"
                                                                                    class="form-control"
-                                                                                   value=""
+                                                                                   th:field="${user.password}"
                                                                                    name="password"
-                                                                                   id="editPassword"
-                                                                                   required>
+                                                                                   id="editPassword">
                                                                         </div>
                                                                         <div class="form-group">
                                                                             <label class="font-weight-bold"
@@ -209,7 +208,8 @@
                                                                                 <option
                                                                                         th:each="role : ${listRoles}"
                                                                                         th:value="${role.name}"
-                                                                                        th:text="${#strings.replace(role.name, 'ROLE_', '')}">
+                                                                                        th:text="${#strings.replace(role.name, 'ROLE_', '')}"
+                                                                                        th:selected="${role.name} == ROLE_USER">>
                                                                                 </option>
                                                                             </select>
                                                                         </div>
@@ -403,7 +403,8 @@
                                                             <option
                                                                     th:each="role : ${listRoles}"
                                                                     th:value="${role.name}"
-                                                                    th:text="${#strings.replace(role.name, 'ROLE_', '')}">
+                                                                    th:text="${#strings.replace(role.name, 'ROLE_', '')}"
+                                                                    th:selected="${role.name} == ROLE_USER">
                                                             </option>
                                                         </select>
                                                     </div>
